#615 Fixed action image alignment issue in properties

--- a/canvas_modules/common-canvas/src/common-properties/controls/controls.scss
+++ b/canvas_modules/common-canvas/src/common-properties/controls/controls.scss
@@ -34,4 +34,10 @@
 	&.hide {
 		display: none;
 	}
+	&.action {
+		display: flex;
+		div:first-child {
+			width: 100%;
+		}
+	}
 }
